default jupyter-book-theme and initial structure

--- a/website/_toc.yml
+++ b/website/_toc.yml
@@ -1,1 +1,9 @@
 - file: intro
+
+- part: Week 1
+  chapters:
+    - file: week1/python-for-economics
+
+- part: Resources
+  chapters:
+    - file: resources/python-setup
