--- a/website/_config.yml
+++ b/website/_config.yml
@@ -1,6 +1,9 @@
 title: "RSIT Workshop (Uni Tübingen) 2021"
 author: "Matthew McKay & Chase Coleman"
 copyright: "2021"
+logo: _assets/qe-logo-large.png
 exclude_patterns: [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", README.md]
 execute:
   execute_notebooks: "off"
+sphinx:
+  extra_extensions: [sphinx_exercise, sphinx_multitoc_numbering]
