updates to week 1

--- a/website/_toc.yml
+++ b/website/_toc.yml
@@ -4,6 +4,8 @@
 - part: Week 1
   chapters:
     - file: week1/python-for-economics
+    - file: week1/github-intro
+    - file: week1/python-ecosystem-tools
 
 - part: Resources
   numbered: false
