eod commit work done on draft notes

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -7,3 +7,5 @@ execute:
   execute_notebooks: "off"
 sphinx:
   extra_extensions: [sphinx_exercise, sphinx_multitoc_numbering]
+bibtex_bibfiles:
+   - _assets/references.bib
