simplify environment to used packages

--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,9 @@ channels:
   - default
 dependencies:
   - python=3.8
-  - anaconda
+  - pandas
+  - dask
+  - numpy
+  - networkx
   - line_profiler
 
