add week1 session 3 framework

--- a/website/_toc.yml
+++ b/website/_toc.yml
@@ -10,7 +10,14 @@
       - file: week1/session1/github-intro
     - file: week1/session3/schedule
       sections:
-      - file: week1/session3/python-ecosystem-tools
+      - file: week1/session3/overview
+      - file: week1/session3/numpy
+      - file: week1/session3/matplotlib
+      - file: week1/session3/pandas
+      - file: week1/session3/scipy
+      - file: week1/session3/numba
+      - file: week1/session3/networkx
+      - file: week1/session3/others
 
 - part: Resources
   numbered: false
