add toc for exercises

--- a/website/_toc.yml
+++ b/website/_toc.yml
@@ -18,6 +18,7 @@
       - file: week1/session3/numba
       - file: week1/session3/networkx
       - file: week1/session3/others
+      - file: week1/session3/exercises
 
 - part: Resources
   numbered: false
