Add Week 1 Resources (Session 1, Session 3) (#2)
* initial work

* updates to week 1

* eod commit work done on draft notes

* fix anaconda environment

* simplify environment to used packages

* add missing package for mybinder

* add note on mybinder

* add additional packages for mybinder

* some work on python-for-economics

* EOD: work on intro lecture

* update mybinder link for demo notebook

* update bio and information on instructors

* add in git and github / aims&expections

* update admonition titles and add intro jupyter notebook

* add aim admonition

* add week1 session 3 framework

* add updates to session3

* update numpy

* add updates for pandas and schedule

* update ignore

* update overview

* add pandas

* add matplotlib demo

* edits to text

* add intro-to-statsmodels

* update path for cloud

* add intro-to-numba and adjust pandas

* remove scipy as not a core focus for workshop

* add scipy to exclude

* add status to networkx

* update list of other libraries

* add plotting exercises

* add session 3 exercises

* add toc for exercises

* remove todo

* improve title

* add status for content

* spellcheck

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+.ipynb_checkpoints
 .DS_Store
 _build
+
+notebooks/session1/data/*.h5
+notebooks/session1/*.png
+notebooks/session1/*.gml
+notebooks/session1/dask*
+notebooks/session1/.ipynb_checkpoints
