add yfinance and linearmodels via pip

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,8 @@ dependencies:
   - numba
   - bokeh
   - statsmodels
-  - linearmodels
-  - yfinance
+  - pip
+  pip:
+    - linearmodels
+    - yfinance
 
