--- a/website/_toc.yml
+++ b/website/_toc.yml
@@ -50,6 +50,12 @@
       - file: week2/session6/pandas-groupby
       - file: week2/session6/pandas-timeseries
       - file: week2/session6/exercises
+    - file: week2/session7/schedule
+      sections:
+      - file: week2/session7/stata-and-jupyter
+      - file: week2/session7/stata-and-python-example
+      - file: week2/session7/python-integrations
+      - file: week2/session7/exercises
 
 
 - part: Resources
